Modificando injecoes e imports nao utilizados